--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -1259,7 +1259,7 @@ textarea::placeholder {
   font-family: Avenir Bold;
   font-size: 1.5rem;
   line-height: 2rem;
-  margin: 2rem 0;
+  margin: 0 0 2rem 0;
 }
 
 @media (min-width: 768px) {
@@ -1361,7 +1361,7 @@ textarea::placeholder {
 
 .createNew__input {
   height: 3rem;
-  padding: 0 0.75rem;
+  padding: 0 1rem;
   margin-bottom: 1.5rem;
 }
 
@@ -1446,8 +1446,7 @@ textarea::placeholder {
 }
 
 .product {
-  width: 90%;
-  margin: 0 auto;
+  margin: 0 1rem;
 }
 
 .product__name {
@@ -1462,7 +1461,7 @@ textarea::placeholder {
 
 .product__name h2 {
   margin: 0;
-  padding-left: 15px;
+  padding-left: 1rem;
   font-family: Avenir Bold;
 }
 
@@ -1526,21 +1525,26 @@ textarea::placeholder {
   line-height: 1.125rem;
 }
 
-.product__itemDesc-title, .product__lastOrder-title, .product__location-title, .product__quantity-title, .product__categories-title {
+.product__itemDesc-title, .product__lastOrder-title {
   font-family: Avenir Bold Demi;
   font-size: 0.75rem;
   line-height: 1.25rem;
   letter-spacing: 0.25px;
   color: #afafaf;
-  margin-top: 2rem;
+  margin: 2rem 0 1rem 0;
+}
+
+.product__location-title, .product__quantity-title, .product__categories-title {
+  font-family: Avenir Bold Demi;
+  font-size: 0.75rem;
+  line-height: 1.25rem;
+  letter-spacing: 0.25px;
+  color: #afafaf;
+  margin: 1.5rem 0 1rem 0;
 }
 
 .product__categories--text {
-  margin-bottom: 40px;
-}
-
-.product__btn {
-  margin: 20px 0;
+  margin-bottom: 2.5rem;
 }
 
 .product__btn button {
@@ -1548,7 +1552,7 @@ textarea::placeholder {
   border: none;
   background-color: transparent;
   color: #ffffff;
-  font-size: 16px;
+  font-size: 1rem;
 }
 
 @media (min-width: 768px) {
@@ -1565,6 +1569,9 @@ textarea::placeholder {
   .product {
     margin: 0 1.5rem;
   }
+  .product p {
+    margin-bottom: 0;
+  }
   .product__name {
     margin: 0;
   }
@@ -1572,14 +1579,20 @@ textarea::placeholder {
     font-family: Avenir Bold;
     font-size: 2.25rem;
     line-height: 2.75rem;
-    margin: 48px 0 40px 0;
+    margin: 3rem 0 2.5rem 0;
+  }
+  .product__quantity-title, .product__categories-title {
+    margin-top: 2rem;
+  }
+  .product__categories {
+    margin-bottom: 2.5rem;
   }
   .product__backArrow {
     margin-top: 0.5rem;
   }
   .product__status {
     margin-bottom: 0;
-    margin-left: 24px;
+    margin-left: 1.5rem;
     margin-top: 0.75rem;
   }
   .product .product-container2 {
@@ -1587,7 +1600,6 @@ textarea::placeholder {
   }
   .product__itemDesc {
     margin-top: 30px;
-    margin-bottom: 30px;
   }
   .product__itemDesc P, .product__lastOrder P, .product__location P, .product__quantity P, .product__categories P {
     font-family: Avenir Regular;
@@ -1658,13 +1670,14 @@ textarea::placeholder {
   .product__lastOrder-title, .product__location-title {
     margin: 0;
   }
+  .product__quantity-title, .product__categories-title {
+    margin-top: 56px;
+  }
   .product__location {
     margin-right: auto;
   }
   .product__categories {
     margin-top: 56px;
-  }
-  .product__categories--text {
     margin-bottom: 48px;
   }
   .product__itemDesc P, .product__lastOrder P, .product__location P, .product__quantity P, .product__categories P {
@@ -2297,7 +2310,7 @@ textarea::placeholder {
 
 .editProduct__title {
   margin: 0;
-  margin-top: 1rem;
+  margin-top: 1.5rem;
   font-family: Avenir Bold Demi;
   font-size: 0.75rem;
   line-height: 1.25rem;
@@ -2368,15 +2381,6 @@ textarea::placeholder {
           align-items: center;
 }
 
-.editProduct__editPageStatus-title {
-  font-family: Avenir Bold Demi;
-  font-size: 0.75rem;
-  line-height: 1.25rem;
-  letter-spacing: 0.25px;
-  color: #afafaf;
-  margin-top: 2rem;
-}
-
 .editProduct__editPageStatus-show {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -2416,7 +2420,7 @@ textarea::placeholder {
 }
 
 .editProduct__categories--textEp {
-  margin-bottom: 20px;
+  margin-bottom: 2.5rem;
 }
 
 @media (min-width: 768px) {
@@ -2434,6 +2438,7 @@ textarea::placeholder {
       -ms-grid-row-align: center;
       align-self: center;
   margin: 0;
+  margin-top: 1.5rem;
 }
 
 @media (min-width: 768px) {
@@ -2529,6 +2534,7 @@ textarea::placeholder {
   }
   .editProduct__btn-cancel {
     padding-top: 0;
+    margin-top: 0;
   }
   .editProduct-wrapper__ep {
     margin-bottom: 24px;
