--- a/client/src/styles/partials/_createNew.scss
+++ b/client/src/styles/partials/_createNew.scss
@@ -5,7 +5,7 @@
   position: fixed;
   width: 100%;
   height: 100%;
-  z-index: 99;
+  z-index: 99; // so it shows on top of header and modal
   background-color: $white;
   @include tablet {
     background-color: rgba(0, 0, 0, 0.6);
@@ -37,7 +37,7 @@
   }
   &__header {
     @include header;
-    margin: 2rem 0;
+    margin: 0 0 2rem 0;
     @include tablet {
       @include headerOne-tablet;
       margin: 3.5rem 0 3rem 0;
@@ -82,27 +82,13 @@
   &__input {
     @extend .input;
     height: 3rem;
-    padding: 0 0.75rem;
+    padding: 0 1rem;
     margin-bottom: 1.5rem;
     @include tablet {
       width: 13.75rem;
       padding-left: 1rem;
     }
   }
-  // &__location {
-  //   @extend .input;
-  //   height: 3rem;
-  //   margin-bottom: 1.5rem;
-  //   padding-left: 0.75rem;
-
-  //   &--option {
-  //     @include paragraph;
-  //     color: $black;
-  //     @include tablet {
-  //       @include paragraph-tablet;
-  //     }
-  //   }
-  // }
   &__status {
     display: flex;
     align-items: center;
