--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -327,7 +327,7 @@ textarea::placeholder {
           justify-content: center;
 }
 
-.header__link--active, .header__link:hover {
+.header__link:hover {
   color: #ffffff;
   font-family: Avenir Bold Demi;
   border-bottom: 0.25rem solid #ffffff;
@@ -724,6 +724,10 @@ textarea::placeholder {
   }
 }
 
+.locations__wrapper {
+  height: 136px;
+}
+
 @media (min-width: 768px) {
   .locations__wrapper {
     display: -webkit-box;
@@ -733,11 +737,17 @@ textarea::placeholder {
         -ms-flex-pack: justify;
             justify-content: space-between;
     margin-top: 3rem;
-    margin-bottom: 3rem;
+    margin-bottom: 1.5rem;
     height: 75px;
     height: -webkit-fit-content;
     height: -moz-fit-content;
     height: fit-content;
+  }
+}
+
+@media (min-width: 1080px) {
+  .locations__wrapper {
+    margin-bottom: 3rem;
   }
 }
 
@@ -787,16 +797,29 @@ textarea::placeholder {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  border-bottom: 1px solid #e1e1e1;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-bottom: 2rem;
+  width: 100%;
 }
 
 @media (min-width: 768px) {
   .locations__bodyMobile {
     display: none;
   }
+}
+
+.locations__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  border-bottom: 1px solid #e1e1e1;
+  margin-top: 1.5rem;
 }
 
 .locations__title {
@@ -936,7 +959,7 @@ textarea::placeholder {
   }
 }
 
-.locations__rightArrowIcon {
+.locations__arrowWrapper {
   margin-left: auto;
 }
 
@@ -944,7 +967,7 @@ textarea::placeholder {
   .locations__rightArrowIcon {
     margin-right: 1.5rem;
     margin-right: initial;
-    padding-top: 15px;
+    margin-left: auto;
   }
 }
 
@@ -992,6 +1015,7 @@ textarea::placeholder {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    margin-bottom: 2rem;
   }
 }
 
@@ -1005,6 +1029,12 @@ textarea::placeholder {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+@media (min-width: 1080px) {
+  .locations__titleWrapper {
+    margin-bottom: 0.5rem;
+  }
 }
 
 .locations__contentWrapper {
@@ -1024,8 +1054,7 @@ textarea::placeholder {
     height: -webkit-fit-content;
     height: -moz-fit-content;
     height: fit-content;
-    padding-top: 32px;
-    padding-bottom: 24px;
+    padding: 1.5rem 0;
   }
 }
 
@@ -1053,7 +1082,7 @@ textarea::placeholder {
     height: -webkit-fit-content;
     height: -moz-fit-content;
     height: fit-content;
-    padding-top: 0;
+    padding-top: 1.5rem;
   }
 }
 
@@ -1092,6 +1121,14 @@ textarea::placeholder {
   margin-right: 50px;
 }
 
+@media (min-width: 768px) {
+  .locations__contact {
+    width: 34.44%;
+    margin-right: 0;
+    padding-right: 4rem;
+  }
+}
+
 @media (min-width: 1080px) {
   .locations__contact {
     margin-right: 0;
@@ -1121,6 +1158,13 @@ textarea::placeholder {
   margin-right: 50px;
 }
 
+@media (min-width: 768px) {
+  .locations__category {
+    width: 34.44%;
+    margin-right: 0;
+  }
+}
+
 @media (min-width: 1080px) {
   .locations__category {
     margin-right: 0;
@@ -1128,6 +1172,13 @@ textarea::placeholder {
     height: -moz-fit-content;
     height: fit-content;
     width: 24%;
+  }
+}
+
+@media (min-width: 768px) {
+  .locations__categories {
+    width: 31.11%;
+    padding-right: 1rem;
   }
 }
 
@@ -1154,8 +1205,7 @@ textarea::placeholder {
     width: -webkit-fit-content;
     width: -moz-fit-content;
     width: fit-content;
-    margin-left: 44.3rem;
-    margin-left: 74%;
+    margin-left: 90%;
     margin-left: 69vw;
     height: -webkit-fit-content;
     height: -moz-fit-content;
@@ -1187,6 +1237,7 @@ textarea::placeholder {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    margin-bottom: 2rem;
   }
 }
 
