--- a/client/src/styles/partials/_locations.scss
+++ b/client/src/styles/partials/_locations.scss
@@ -242,12 +242,18 @@
     border-bottom: 1px solid $mercury;
     height: 6.25rem;
     @include tablet {
+      width: 100%;
+      flex-direction: row;
       align-items: initial;
       height: fit-content;
       padding-top: 1.5rem;
     }
     @include desktop {
       height: 5rem;
+    }
+    &--text {
+      width: 100%;
+      margin-right: auto;
     }
   }
 
@@ -328,11 +334,8 @@
 
   &__imageContainer {
     @include tablet {
-      width: fit-content;
-      margin-left: 90%;
-      margin-left: 69vw;
       height: fit-content;
-      width: 100%;
+      margin-right: 0.5rem;
       display: flex;
       justify-items: flex-end;
     }
